--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@heroicons/react": "^2.0.13",
     "@next-auth/prisma-adapter": "^1.0.5",
     "@prisma/client": "^4.5.0",
     "@tanstack/react-query": "^4.16.0",
@@ -17,6 +18,7 @@
     "@trpc/next": "^10.0.0",
     "@trpc/react-query": "^10.0.0",
     "@trpc/server": "^10.0.0",
+    "discord.js": "^14.7.1",
     "next": "13.0.2",
     "next-auth": "^4.18.3",
     "react": "18.2.0",
@@ -38,6 +40,7 @@
     "prettier-plugin-tailwindcss": "^0.1.13",
     "prisma": "^4.5.0",
     "tailwindcss": "^3.2.0",
+    "tsx": "^3.12.1",
     "typescript": "^4.8.4"
   },
   "ct3aMetadata": {
