--- a/.env.example
+++ b/.env.example
@@ -18,3 +18,8 @@ NEXTAUTH_URL=http://localhost:3000
 # Next Auth Discord Provider
 DISCORD_CLIENT_ID=
 DISCORD_CLIENT_SECRET=
+
+# Dwight Bot
+DISCORD_BOT_AUTH_TOKEN=
+SOUNDS_FOLDER=
+DEFAULT_LIMIT=
