--- a/package.json
+++ b/package.json
@@ -14,18 +14,19 @@
     "@headlessui/tailwindcss": "^0.1.2",
     "@heroicons/react": "^2.0.13",
     "@next-auth/prisma-adapter": "^1.0.5",
+    "@next/font": "^13.1.1",
     "@prisma/client": "^4.8.1",
-    "@tanstack/react-query": "^4.16.0",
+    "@tanstack/react-query": "^4.22.0",
     "@trpc/client": "^10.0.0",
     "@trpc/next": "^10.0.0",
     "@trpc/react-query": "^10.0.0",
     "@trpc/server": "^10.0.0",
     "discord.js": "^14.7.1",
-    "next": "13.0.2",
+    "next": "^13.1.1",
     "next-auth": "^4.18.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "superjson": "1.9.1",
+    "superjson": "^1.12.1",
     "zod": "^3.18.0"
   },
   "devDependencies": {
@@ -36,11 +37,11 @@
     "@typescript-eslint/parser": "^5.33.0",
     "autoprefixer": "^10.4.7",
     "eslint": "^8.26.0",
-    "eslint-config-next": "13.0.2",
+    "eslint-config-next": "^13.1.1",
     "postcss": "^8.4.14",
     "prettier": "^2.7.1",
-    "prettier-plugin-tailwindcss": "^0.1.13",
-    "prisma": "^4.5.0",
+    "prettier-plugin-tailwindcss": "^0.2.1",
+    "prisma": "^4.8.1",
     "tailwindcss": "^3.2.0",
     "tsx": "^3.12.1",
     "typescript": "^4.8.4"
