--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@trpc/react-query": "^10.0.0",
     "@trpc/server": "^10.0.0",
     "discord.js": "^14.7.1",
+    "memory-cache": "^0.2.0",
     "next": "^13.1.1",
     "next-auth": "^4.18.3",
     "react": "18.2.0",
@@ -30,6 +31,7 @@
     "zod": "^3.18.0"
   },
   "devDependencies": {
+    "@types/memory-cache": "^0.2.2",
     "@types/node": "^18.0.0",
     "@types/react": "^18.0.14",
     "@types/react-dom": "^18.0.5",
